add footer element to page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <p id="congrats" style="display: none;">Congratulations! You've completed all the questions!</p>
         </div>
     </div>
+    <footer> 
+        <p>&copy; 2024 Viking History Game. All rights reserved.</p>
+     </footer>
     <script src="script.js"></script>
 </body>
 </html>
